--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Quanyi Wang's Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <!-- your CSS file link goes HERE -->
-    <link rel='stylesheet' href='./css/main.css' </head> <body>
+    <link rel='stylesheet' href='./css/main.css' />
+</head>
 
-    <div class='container'>
-        <nav class="navbar navbar-expand-lg navbar-light ">
+<body>
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light ">
+            <img src="./imgs/html.png" alt="icon" style="max-width: 30px;">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
@@ -33,10 +35,121 @@
                 </ul>
             </div>
         </nav>
-        <!--your content goes here-->
-    </div>
 
-    <!-- your content goes here -->
+        <br />
+
+        <!-- your content goes here -->
+        <div class="jumbotron jumbotron-fluid text-center">
+            <h1>Quanyi,Wang</h1>
+            <img src="./imgs/html.png" alt="avantar">
+        </div>
+    </header>
+    <div class="technology">
+        <img src="imgs/git.png" alt="Tech 1">
+        <div class="info">
+            <h2>Tech 1: GitHub</h2>
+            <p>GitHub is an American company that provides hosting for software development. Github includes
+                version control using Git, which allows software projects to keep track of all versions and
+                revert to previous versions if necessary. It offers all of the distributed version control
+                and
+                source code management (SCM) functionality of Git as well as adding its own features. It
+                provides
+                access control and several collaboration features such as bug tracking, feature requests,
+                task
+                management, and wikis for every project.</p>
+            <a href="https://en.wikipedia.org/wiki/GitHub">https://en.wikipedia.org/wiki/GitHub</a>
+        </div>
+    </div>
+    <div class="technology">
+        <img src="imgs/boot.png" alt="Tech 2">
+        <div class="info">
+            <h3>Tech 2: Bootstrap</h3>
+            <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype
+                your
+                ideas
+                or build your entire app with our Sass variables and mixins, responsive grid system,
+                extensive
+                prebuilt
+                components, and powerful plugins built on jQuery.</p>
+            <a href="https://getbootstrap.com">https://getbootstrap.com</a>
+        </div>
+    </div>
+    <div class="technology">
+        <img src="imgs/html.png" alt="Tech 3">
+        <div class="info">
+            <h3>Tech 3: HTML</h3>
+            <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be
+                displayed in a web browser. It can be assisted by technologies such as Cascading Style
+                Sheets
+                (CSS) and scripting languages such as JavaScript.
+
+                Web browsers receive HTML documents from a web server or from local storage and render the
+                documents into multimedia web pages. HTML describes the structure of a web page semantically
+                and
+                originally included cues for the appearance of the document.</p>
+            <a href="https://en.wikipedia.org/wiki/HTML">https://en.wikipedia.org/wiki/HTML </a>
+        </div>
+    </div>
+    <div class="technology">
+        <img src="imgs/css.png" alt="Tech 4">
+        <div class="info">
+            <h2>Tech 4: CSS</h2>
+            <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation
+                of a
+                document written in a markup language like HTML. CSS is a cornerstone technology of the
+                World
+                Wide Web, alongside HTML and JavaScript.
+
+                CSS is designed to enable the separation of presentation and content, including layout,
+                colors,
+                and fonts. This separation can improve content accessibility, provide more flexibility and
+                control in the specification of presentation characteristics, enable multiple web pages to
+                share
+                formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and
+                repetition in the structural content.</p>
+            <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">https://en.wikipedia.org/wiki/Cascading_Style_Sheets
+            </a>
+        </div>
+    </div>
+    <div class="technology">
+        <img src="imgs/python.png" alt="Tech 5">
+        <div class="info">
+            <h3>Tech 5: Python (programming language)</h3>
+            <p>Python is an interpreted, high-level, general-purpose programming language. Created by Guido
+                van
+                Rossum and first released in 1991, Python's design philosophy emphasizes code readability
+                with
+                its notable use of significant whitespace. Its language constructs and object-oriented
+                approach
+                aim to help programmers write clear, logical code for small and large-scale projects.
+
+                Python is dynamically typed and garbage-collected. It supports multiple programming
+                paradigms,
+                including procedural, object-oriented, and functional programming. Python is often described
+                as
+                a "batteries included" language due to its comprehensive standard library.</p>
+            <a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
+                https://en.wikipedia.org/wiki/Python_(programming_language)</a>
+        </div>
+    </div>
+    <main class="technology">
+        <img src="imgs/js.png" alt="Tech 1">
+        <div class="info">
+            <h3>Tech 6: JavaScript</h3>
+            <p>JavaScript often abbreviated as JS, is a high-level, just-in-time compiled, object-oriented
+                programming language that conforms to the ECMAScript specification. JavaScript has
+                curly-bracket
+                syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
+
+                Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.
+                JavaScript enables interactive web pages and is an essential part of web applications. The
+                vast
+                majority of websites use it, and major web browsers have a dedicated JavaScript engine to
+                execute it.</p>
+            <a href="https://en.wikipedia.org/wiki/JavaScript">https://en.wikipedia.org/wiki/JavaScript </a>
+        </div>
+        </section>
+    </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -47,6 +160,6 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <!-- your JavaScript file(s) go here -->
-    </body>
+</body>
 
 </html>
