--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <img src="./imgs/html.png" alt="avantar">
         </div>
     </header>
+    <!-- <div class="container"> -->
     <div class="technology">
         <img src="imgs/git.png" alt="Tech 1">
         <div class="info">
@@ -132,8 +133,8 @@
                 https://en.wikipedia.org/wiki/Python_(programming_language)</a>
         </div>
     </div>
-    <main class="technology">
-        <img src="imgs/js.png" alt="Tech 1">
+    <div class="technology">
+        <img src="imgs/js.png" alt="Tech 6">
         <div class="info">
             <h3>Tech 6: JavaScript</h3>
             <p>JavaScript often abbreviated as JS, is a high-level, just-in-time compiled, object-oriented
@@ -148,8 +149,8 @@
                 execute it.</p>
             <a href="https://en.wikipedia.org/wiki/JavaScript">https://en.wikipedia.org/wiki/JavaScript </a>
         </div>
-        </section>
-    </main>
+    </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
