update header diplpay-3

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
 
     <header>
         <div class="jumbotron jumbotron-fluid text-center">
-            <h1>Contact</h1>
+            <h1 class="display-3">Contact</h1>
+            </br>
             <img src="./imgs/html.png" alt="avatar">
         </div>
     </header>
