--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,8 @@
 
     <header>
         <div class="jumbotron jumbotron-fluid text-center">
-            <h1>Portfolio</h1>
+            <h1 class="display-3">Portfolio</h1>
+            </br>
             <img src="./imgs/html.png" alt="avatar">
         </div>
     </header>
