--- a/index.html
+++ b/index.html
@@ -40,116 +40,138 @@
 
         <!-- your content goes here -->
         <div class="jumbotron jumbotron-fluid text-center">
-            <h1>Quanyi,Wang</h1>
+            <h1 class="display-3">Quanyi,Wang</h1>
+            </br>
             <img src="./imgs/html.png" alt="avantar">
         </div>
     </header>
-    <!-- <div class="container"> -->
-    <div class="technology">
-        <img src="imgs/git.png" alt="Tech 1">
-        <div class="info">
-            <h2>Tech 1: GitHub</h2>
-            <p>GitHub is an American company that provides hosting for software development. Github includes
-                version control using Git, which allows software projects to keep track of all versions and
-                revert to previous versions if necessary. It offers all of the distributed version control
-                and
-                source code management (SCM) functionality of Git as well as adding its own features. It
-                provides
-                access control and several collaboration features such as bug tracking, feature requests,
-                task
-                management, and wikis for every project.</p>
-            <a href="https://en.wikipedia.org/wiki/GitHub">https://en.wikipedia.org/wiki/GitHub</a>
+    <div class="container-fluid">
+        <div class="technology">
+            <img src="imgs/git.png" alt="Tech 1">
+            <div class="info">
+                <h2>Tech 1: GitHub</h2>
+                <p>GitHub is an American company that provides hosting for software development. Github includes
+                    version control using Git, which allows software projects to keep track of all versions and
+                    revert to previous versions if necessary. It offers all of the distributed version control
+                    and
+                    source code management (SCM) functionality of Git as well as adding its own features. It
+                    provides
+                    access control and several collaboration features such as bug tracking, feature requests,
+                    task
+                    management, and wikis for every project.</p>
+                <a href="https://en.wikipedia.org/wiki/GitHub">https://en.wikipedia.org/wiki/GitHub</a>
+            </div>
         </div>
-    </div>
-    <div class="technology">
-        <img src="imgs/boot.png" alt="Tech 2">
-        <div class="info">
-            <h3>Tech 2: Bootstrap</h3>
-            <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype
-                your
-                ideas
-                or build your entire app with our Sass variables and mixins, responsive grid system,
-                extensive
-                prebuilt
-                components, and powerful plugins built on jQuery.</p>
-            <a href="https://getbootstrap.com">https://getbootstrap.com</a>
+        <div class="technology">
+            <img src="imgs/boot.png" alt="Tech 2">
+            <div class="info">
+                <h3>Tech 2: Bootstrap</h3>
+                <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype
+                    your
+                    ideas
+                    or build your entire app with our Sass variables and mixins, responsive grid system,
+                    extensive
+                    prebuilt
+                    components, and powerful plugins built on jQuery.</p>
+                <a href="https://getbootstrap.com">https://getbootstrap.com</a>
+            </div>
         </div>
-    </div>
-    <div class="technology">
-        <img src="imgs/html.png" alt="Tech 3">
-        <div class="info">
-            <h3>Tech 3: HTML</h3>
-            <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be
-                displayed in a web browser. It can be assisted by technologies such as Cascading Style
-                Sheets
-                (CSS) and scripting languages such as JavaScript.
+        <div class="technology">
+            <img src="imgs/html.png" alt="Tech 3">
+            <div class="info">
+                <h3>Tech 3: HTML</h3>
+                <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be
+                    displayed in a web browser. It can be assisted by technologies such as Cascading Style
+                    Sheets
+                    (CSS) and scripting languages such as JavaScript.
 
-                Web browsers receive HTML documents from a web server or from local storage and render the
-                documents into multimedia web pages. HTML describes the structure of a web page semantically
-                and
-                originally included cues for the appearance of the document.</p>
-            <a href="https://en.wikipedia.org/wiki/HTML">https://en.wikipedia.org/wiki/HTML </a>
+                    Web browsers receive HTML documents from a web server or from local storage and render the
+                    documents into multimedia web pages. HTML describes the structure of a web page semantically
+                    and
+                    originally included cues for the appearance of the document.</p>
+                <a href="https://en.wikipedia.org/wiki/HTML">https://en.wikipedia.org/wiki/HTML </a>
+            </div>
         </div>
-    </div>
-    <div class="technology">
-        <img src="imgs/css.png" alt="Tech 4">
-        <div class="info">
-            <h2>Tech 4: CSS</h2>
-            <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation
-                of a
-                document written in a markup language like HTML. CSS is a cornerstone technology of the
-                World
-                Wide Web, alongside HTML and JavaScript.
+        <div class="technology">
+            <img src="imgs/css.png" alt="Tech 4">
+            <div class="info">
+                <h2>Tech 4: CSS</h2>
+                <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation
+                    of a
+                    document written in a markup language like HTML. CSS is a cornerstone technology of the
+                    World
+                    Wide Web, alongside HTML and JavaScript.
 
-                CSS is designed to enable the separation of presentation and content, including layout,
-                colors,
-                and fonts. This separation can improve content accessibility, provide more flexibility and
-                control in the specification of presentation characteristics, enable multiple web pages to
-                share
-                formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and
-                repetition in the structural content.</p>
-            <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">https://en.wikipedia.org/wiki/Cascading_Style_Sheets
-            </a>
+                    CSS is designed to enable the separation of presentation and content, including layout,
+                    colors,
+                    and fonts. This separation can improve content accessibility, provide more flexibility and
+                    control in the specification of presentation characteristics, enable multiple web pages to
+                    share
+                    formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and
+                    repetition in the structural content.</p>
+                <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">https://en.wikipedia.org/wiki/Cascading_Style_Sheets
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="technology">
-        <img src="imgs/python.png" alt="Tech 5">
-        <div class="info">
-            <h3>Tech 5: Python (programming language)</h3>
-            <p>Python is an interpreted, high-level, general-purpose programming language. Created by Guido
-                van
-                Rossum and first released in 1991, Python's design philosophy emphasizes code readability
-                with
-                its notable use of significant whitespace. Its language constructs and object-oriented
-                approach
-                aim to help programmers write clear, logical code for small and large-scale projects.
+        <div class="technology">
+            <img src="imgs/python.png" alt="Tech 5">
+            <div class="info">
+                <h3>Tech 5: Python (programming language)</h3>
+                <p>Python is an interpreted, high-level, general-purpose programming language. Created by Guido
+                    van
+                    Rossum and first released in 1991, Python's design philosophy emphasizes code readability
+                    with
+                    its notable use of significant whitespace. Its language constructs and object-oriented
+                    approach
+                    aim to help programmers write clear, logical code for small and large-scale projects.
 
-                Python is dynamically typed and garbage-collected. It supports multiple programming
-                paradigms,
-                including procedural, object-oriented, and functional programming. Python is often described
-                as
-                a "batteries included" language due to its comprehensive standard library.</p>
-            <a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
-                https://en.wikipedia.org/wiki/Python_(programming_language)</a>
+                    Python is dynamically typed and garbage-collected. It supports multiple programming
+                    paradigms,
+                    including procedural, object-oriented, and functional programming. Python is often described
+                    as
+                    a "batteries included" language due to its comprehensive standard library.</p>
+                <a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
+                    https://en.wikipedia.org/wiki/Python_(programming_language)</a>
+            </div>
         </div>
-    </div>
-    <div class="technology">
-        <img src="imgs/js.png" alt="Tech 6">
-        <div class="info">
-            <h3>Tech 6: JavaScript</h3>
-            <p>JavaScript often abbreviated as JS, is a high-level, just-in-time compiled, object-oriented
-                programming language that conforms to the ECMAScript specification. JavaScript has
-                curly-bracket
-                syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
+        <div class="technology">
+            <img src="imgs/js.png" alt="Tech 6">
+            <div class="info">
+                <h3>Tech 6: JavaScript</h3>
+                <p>JavaScript often abbreviated as JS, is a high-level, just-in-time compiled, object-oriented
+                    programming language that conforms to the ECMAScript specification. JavaScript has
+                    curly-bracket
+                    syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
 
-                Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.
-                JavaScript enables interactive web pages and is an essential part of web applications. The
-                vast
-                majority of websites use it, and major web browsers have a dedicated JavaScript engine to
-                execute it.</p>
-            <a href="https://en.wikipedia.org/wiki/JavaScript">https://en.wikipedia.org/wiki/JavaScript </a>
+                    Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.
+                    JavaScript enables interactive web pages and is an essential part of web applications. The
+                    vast
+                    majority of websites use it, and major web browsers have a dedicated JavaScript engine to
+                    execute it.</p>
+                <a href="https://en.wikipedia.org/wiki/JavaScript">https://en.wikipedia.org/wiki/JavaScript </a>
+            </div>
         </div>
     </div>
+    <div class="container">
+        <div class="card">
+            <div class='col-sm-12'>
+
+                <!-- <img src="imgs/git.png" alt="Tech 1"> -->
+                <h2>Tech 1: GitHub</h2>
+                <p>GitHub is an American company that provides hosting for software development. Github includes
+                    version control using Git, which allows software projects to keep track of all versions and
+                    revert to previous versions if necessary. It offers all of the distributed version control
+                    and
+                    source code management (SCM) functionality of Git as well as adding its own features. It
+                    provides
+                    access control and several collaboration features such as bug tracking, feature requests,
+                    task
+                    management, and wikis for every project.</p>
+                <a href="https://en.wikipedia.org/wiki/GitHub">https://en.wikipedia.org/wiki/GitHub</a>
+            </div>
+        </div>
+    </div>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
