fix container in class

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,9 @@
 <body>
     <div class='container'>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light ">
-
+            <a class="navbar-brand" href="#">
+                <img src="./imgs/html.png" width="40" height="40" class="d-inline-block align-top" alt="">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,89 +49,88 @@
             <img src="./imgs/html.png" alt="avatar">
         </div>
     </header>
-    <div class="cards">
-        <div class="row row-cols-1 row-cols-md-3">
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="imgs/4.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Fixing Paths and Links</h5>
-                        <p class="card-text">The point of this assignment is to fix ALL the problems of links, paths,
-                            and
-                            filenames.</p>
-                        <a href="#" class="btn btn-primary">Go to my Github</a>
+    <div class="container">
+        <div class="cards">
+            <div class="row row-cols-1 row-cols-md-3">
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="imgs/4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Fixing Paths and Links</h5>
+                            <p class="card-text">The point of this assignment is to fix ALL the problems of links,
+                                paths,
+                                and
+                                filenames.</p>
+                            <a href="#" class="btn btn-primary">Go to my Github</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="imgs/5.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Font Stacks</h5>
-                        <p class="card-text">You need to make TWO valid font-stacks. One will be a serif font stack and
-                            the
-                            other will
-                            be a sans-serif font stack.</p>
-                        <a href="#" class="btn btn-primary">Go to my Github</a>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="imgs/5.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Font Stacks</h5>
+                            <p class="card-text">You need to make TWO valid font-stacks. One will be a serif font stack
+                                and
+                                the
+                                other will
+                                be a sans-serif font stack.</p>
+                            <a href="#" class="btn btn-primary">Go to my Github</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="imgs/6.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Layout Alignment</h5>
-                        <p class="card-text">The point of this assignment is to fix ALL the broken and mismatched
-                            element
-                            alignment in the attached HTML and CSS.</p>
-                        <a href="#" class="btn btn-primary">Go to my Github</a>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="imgs/6.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Layout Alignment</h5>
+                            <p class="card-text">The point of this assignment is to fix ALL the broken and mismatched
+                                element
+                                alignment in the attached HTML and CSS.</p>
+                            <a href="#" class="btn btn-primary">Go to my Github</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div class="row row-cols-1 row-cols-md-3">
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="imgs/8.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Colour Schemes</h5>
-                        <p class="card-text">The point of this assignment is to create a colour scheme using hsl()
-                            colours
-                            and then use CSS variables to apply them.</p>
-                        <a href="#" class="btn btn-primary">Go to my Github</a>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="imgs/8.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Colour Schemes</h5>
+                            <p class="card-text">The point of this assignment is to create a colour scheme using hsl()
+                                colours
+                                and then use CSS variables to apply them.</p>
+                            <a href="#" class="btn btn-primary">Go to my Github</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="imgs/9.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">To Replicate A PDF</h5>
-                        <p class="card-text">Background image to be selected from Picsum Pick your own image to use as
-                            the
-                            background.</p>
-                        <a href="#" class="btn btn-primary">Go to my Github</a>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="imgs/9.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">To Replicate A PDF</h5>
+                            <p class="card-text">Background image to be selected from Picsum Pick your own image to use
+                                as
+                                the
+                                background.</p>
+                            <a href="#" class="btn btn-primary">Go to my Github</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col mb-4">
-                <div class="card h-100">
-                    <img src="imgs/10.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Responsive Images and Form</h5>
-                        <p class="card-text">Use ColorZilla to extract a two or three colours
-                            from
-                            your image. Make sure that all inputs, labels, and heading text use the same font.</p>
-                        <a href="#" class="btn btn-primary">Go to my Github</a>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="imgs/10.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Responsive Images and Form</h5>
+                            <p class="card-text">Use ColorZilla to extract a two or three colours
+                                from
+                                your image. Make sure that all inputs, labels, and heading text use the same font.</p>
+                            <a href="#" class="btn btn-primary">Go to my Github</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    </div>
-
     <!-- your content goes here -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
