--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,9 @@
 
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light ">
+        <a class="navbar-brand" href="#">
+            <img src="./imgs/html.png" width="40" height="40" class="d-inline-block align-top" alt="">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
