dele navbar brand

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#">
-                <img src="./imgs/html.png" width="40" height="40" class="d-inline-block align-top" alt="">
-            </a>
+            <!-- <a class="navbar-brand" href="#">
+                <!-- <img src="./imgs/portaitMe.png" width="40" height="40" border-radius="50%" ;
+                    class="d-inline-block align-top" alt=""> -->
+            <!-- </a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,9 +45,10 @@
         <div class="jumbotron jumbotron-fluid text-center">
             <h1 class="display-3">Quanyi,Wang</h1>
             </br>
-            <img src="./imgs/html.png" alt="avantar">
+            <img src="./imgs/portaitMe.png" alt="avantar">
         </div>
     </header>
+
     <div class="container-fluid">
         <div class="technology">
             <img src="imgs/git.png" alt="Tech 1">
