--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
 
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="#">
-            <img src="./imgs/html.png" width="40" height="40" class="d-inline-block align-top" alt="">
-        </a>
+        <!-- <a class="navbar-brand" href="#"> -->
+        <!-- <img src="./imgs/html.png" width="40" height="40" class="d-inline-block align-top" alt=""> -->
+        <!-- </a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,39 +37,46 @@
             </ul>
     </nav>
     </br>
-    </br>
 
     <header>
         <div class="jumbotron jumbotron-fluid text-center">
             <h1 class="display-3">Contact</h1>
             </br>
-            <img src="./imgs/html.png" alt="avatar">
+            <img src="./imgs/portaitMe.png" alt="avantar">
         </div>
     </header>
     <div class='container'>
         <form>
             <div class="form-group">
-                <label for="name">Name</label>
-                <input type="name" class="form-control" id="name" placeholder="name">
-            </div>
-            <div class="form-group">
-                <label>Email address</label>
-                <input type="email" class="form-control" id="Email1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
-            </div>
-
-            <div class="form-group">
-                <label>Telephone</label>
-                <input type="tel" class='form-control' id="tel" placeholder='Enter your phone number'>
-            </div>
-            <div class="form-group">
-                <label for="details">Job details</label>
-                <textarea class='form-control' id='details' rows='5'
-                    placeholder='please provide a time frame for the work and details about the job.'></textarea>
-            </div>
-            <button type=" submit" class="btn btn-primary">Submit</button>
+                <label>Name</label>
+                <div class="row">
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="First name">
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="Last name">
+                    </div>
+                </div>
+                </br>
+                <div class="form-group">
+                    <label>Email address</label>
+                    <input type="email" class="form-control" id="Email1" aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                        else.</small>
+                </div>
+                </br>
+                <div class="form-group">
+                    <label>Telephone</label>
+                    <input type="tel" class='form-control' id="tel" placeholder='Enter your phone number'>
+                </div>
+                </br>
+                <div class="form-group">
+                    <label for="details">Job details</label>
+                    <textarea class='form-control' id='details' rows='5'
+                        placeholder='please provide a time frame for the work and details about the job.'></textarea>
+                </div>
+                <button type=" submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
