--- a/contact.html
+++ b/contact.html
@@ -38,29 +38,78 @@
     </nav>
     </br>
 
-    <header>
-        <div class="jumbotron jumbotron-fluid text-center">
-            <h1 class="display-3">Contact</h1>
+   
+        <!-- <div class="jumbotron jumbotron-fluid text-center">
+            <h1 class="display-3">Contact Me</h1>
             </br>
-            <img src="./imgs/portaitMe.png" alt="avantar">
+            <!-- <img src="./imgs/portaitMe.png" alt="avantar"> -->
+        </div> -->
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="imgs/c3.jpg" class="d-block w-100" alt="image1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Quanyi Wang's Portfolio</h5>
+                        <p>"The future belongs to those who believe in the beauty of their dreams." <br />-Eleanor Roosevelt</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/imgs/c1.jpg" class="d-block w-100" alt="image2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Quanyi Wang's Portfolio</h5>
+                        <p>"Do not go where the path may lead, go instead where there is no path and leave a trail." <br />-Ralph Waldo Emerson</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/imgs/c2.jpg" class="d-block w-100" alt="image3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Quanyi Wang's Portfolio</h5>
+                        <p>"Life is either a daring adventure or nothing at all." <br/>-Helen Keller</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+
+            <script>
+                $("#carouselExampleCaptions").carousel(
+                    {
+                        interval:100
+                    }
+                );
+            </script>
+            
         </div>
-    </header>
+    
+<br>
+
     <div class='container'>
-        <form>
+        <form action="connect.php" method="POST">
             <div class="form-group">
                 <label>Name</label>
                 <div class="row">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="First name">
+                        <input type="text" class="form-control" name="firstName" placeholder="First name">
                     </div>
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Last name">
+                        <input type="text" class="form-control" name="lastName" placeholder="Last name">
                     </div>
                 </div>
                 </br>
                 <div class="form-group">
                     <label>Email address</label>
-                    <input type="email" class="form-control" id="Email1" aria-describedby="emailHelp"
+                    <input type="email" class="form-control" name="email" id="Email1" aria-describedby="emailHelp"
                         placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                         else.</small>
@@ -68,12 +117,13 @@
                 </br>
                 <div class="form-group">
                     <label>Telephone</label>
-                    <input type="tel" class='form-control' id="tel" placeholder='Enter your phone number'>
+                    <input type="tel" class='form-control' name="telephone" id="tel"
+                        placeholder='Enter your phone number'>
                 </div>
                 </br>
                 <div class="form-group">
                     <label for="details">Job details</label>
-                    <textarea class='form-control' id='details' rows='5'
+                    <textarea class='form-control' id='details' name="jobDetails" rows='5'
                         placeholder='please provide a time frame for the work and details about the job.'></textarea>
                 </div>
                 <button type=" submit" class="btn btn-primary">Submit</button>
