--- a/portfolio.html
+++ b/portfolio.html
@@ -42,14 +42,62 @@
     </br>
     </br>
 
-    <header>
+    <!-- <header>
         <div class="jumbotron jumbotron-fluid text-center">
             <h1 class="display-3">Portfolio</h1>
             </br>
-            <img src="./imgs/portaitMe.png" alt="avantar">
+            <!-- <img src="./imgs/portaitMe.png" alt="avantar"> -->
         </div>
-    </header>
+    </header> -->
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imgs/c3.jpg" class="d-block w-100" alt="image1">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Quanyi Wang's Portfolio</h5>
+                    <p>"Life is really simple, but we insist on making it complicated." <br/>-Confucius</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/imgs/c1.jpg" class="d-block w-100" alt="image2">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Quanyi Wang's Portfolio</h5>
+                    <p>"Keep smiling, because life is a beautiful thing and there's so much to smile about." <br/>-Marilyn Monroe</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/imgs/c2.jpg" class="d-block w-100" alt="image3">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Quanyi Wang's Portfolio</h5>
+                    <p>"You have brains in your head. You have feet in your shoes. You can steer yourself any direction you choose." <br />-Dr. Seuss</p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
 
+        <script>
+            $("#carouselExampleCaptions").carousel(
+                {
+                    interval:100
+                }
+            );
+        </script>
+        
+    </div>
+    <br>
+    <br>
     <div class="container">
         <div class="row row-cols-md-3">
             <div class="col mb-4">
